--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -38,6 +38,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClientLib">
+      <HintPath>..\ClientLib\bin\Release\ClientLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
